Manual de ayuda

--- a/afirma-simple-plugin-internallydetachedview/src/main/resources/es/gob/afirma/plugin/internallydetachedview/propiedades.properties
+++ b/afirma-simple-plugin-internallydetachedview/src/main/resources/es/gob/afirma/plugin/internallydetachedview/propiedades.properties
@@ -1,4 +1,5 @@
 prefijoOriginal=Internally-detached_
+prefijoManual=Manual_
 
 extensionPdf=pdf
 extensionTxt=txt
@@ -8,10 +9,12 @@ mimeTypeTxt=text/plain
 mimeTypePdf=application/pdf
 
 attributeMimeType=MimeType
-
+ 
 rutaRecursos=es/gob/afirma/plugin/internallydetachedview/
 ficheroAyuda=Plugin_InternallyDetachedView_v00r01.pdf
+
 separadorListaEtiquetas=@@@
 separadorEtiqueta=,
+separadorExtension=.
 
 configEtiquetas=ETIQUETAS_ORIGINAL
