--- a/afirma-simple-plugin-internallydetachedfolder/pom.xml
+++ b/afirma-simple-plugin-internallydetachedfolder/pom.xml
@@ -1,32 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>afirma-ui-simpleafirma-plugin-internallydetachedfolder</artifactId>
 	<packaging>jar</packaging>
-	
+	<groupId>es.gob.afirma</groupId>
+	<version>v00.r01</version>
 	<name>afirma-ui-simpleafirma-plugin-internallydetachedfolder</name>
 	<description>Plugin para extraer los documentos almacenados en los archivos de firma XML de una carpeta</description>
-	
-	<parent>
-		<groupId>es.gob.afirma</groupId>
-		<artifactId>afirma-client</artifactId>
-		<version>1.6.5</version>
-	</parent>
+
+	<properties>
+		<afirma.version>1.6.5</afirma.version>
+	</properties>
 
 	<dependencies>
 
 		<dependency>
 			<groupId>es.gob.afirma</groupId>
 			<artifactId>afirma-core</artifactId>
-			<version>${clienteafirma.version}</version>
+			<version>${afirma.version}</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>es.gob.afirma</groupId>
 			<artifactId>afirma-ui-simpleafirma-plugins</artifactId>
-			<version>${clienteafirma.version}</version>
+			<version>${afirma.version}</version>
 		</dependency>
 
 	</dependencies>
