--- a/afirma-simple-plugin-tablahuellas/src/main/resources/es/gob/afirma/plugin/tablahuellas/propiedades.properties
+++ b/afirma-simple-plugin-tablahuellas/src/main/resources/es/gob/afirma/plugin/tablahuellas/propiedades.properties
@@ -18,7 +18,7 @@ configEtiquetas=ETIQUETAS_ORIGINAL
 
 
 
-rtfHeader={\\rtf1\\ansi\\deff0{\\fonttbl{\\f60\\fnil\\fprq2\\fcharset128 NewsGotT;}}{\\colortbl;\\red226\\green227\\blue224;\\red0\\green0\\blue0;}
+rtfHeader={\\rtf1\\ansi\\deff0{\\fonttbl{\\f60\\fnil\\fprq2\\fcharset128 @font@;}}{\\colortbl;\\red226\\green227\\blue224;\\red0\\green0\\blue0;}
 rtfTablaTitulo=\\trowd\\clcbpat1\\cellx8500{\\pard\\intbl\\fi140\\brdrt\\brdrs\\brdrw1\\brdrl\\brdrs\\brdrw1\\brdrb\\brdrs\\brdrw1\\brdrr\\brdrs\\brdrw1{\\f60\\fs24\\b\\cf2 @titulo@}}\\cell\\row
 rtfTablaFichero=\\trowd\\clbrdrl\\brdrs\\brdrw1\\cellx1500\\clbrdrr\\brdrs\\brdrw1\\cellx7000{\\pard\\intbl\\fi140{\\f60\\fs20 @ficheroTit@}}\\cell{\\pard\\intbl{\\f60\\fs20 @fichero@}}\\cell\\row
 rtfTablaTamano=\\trowd\\clbrdrl\\brdrs\\brdrw1\\cellx1500\\clbrdrr\\brdrs\\brdrw1\\cellx7000{\\pard\\intbl\\fi140{\\f60\\fs20 @tamanoTit@}}\\cell{\\pard\\intbl{\\f60\\fs20 @tamano@}}\\cell\\row
@@ -26,6 +26,8 @@ rtfTablaCsv=\\trowd\\clbrdrl\\brdrs\\brdrw1\\cellx1500\\clbrdrr\\brdrs\\brdrw1\\
 rtfTablaHuella=\\trowd\\clbrdrl\\brdrs\\brdrw1\\clbrdrb\\brdrs\\brdrw1\\cellx1500\\clbrdrr\\brdrs\\brdrw1\\clbrdrb\\brdrs\\brdrw1\\cellx7000{\\pard\\intbl\\fi140{\\f60\\fs20 @huellaTit@}}\\cell{\\pard\\intbl{\\f60\\fs20 @huella@}}\\cell\\row
 rtfTablaTituloHuellaFormato=\\trowd\\cellx7500{\\pard\\intbl\\qr\\ri140\\f60\\fs16 @tituloHuellaFormato@}\\intbl\\cell\\row 
 rtfFooter=}
+
+rtfCampoDefaultFont=@font@
 
 rtfCampoTituloContenido=@titulo@
 rtfCampoTituloHuellaFormato=@tituloHuellaFormato@
