--- a/afirma-simple-plugin-tablahuellas/src/main/resources/es/gob/afirma/plugin/tablahuellas/propiedades.properties
+++ b/afirma-simple-plugin-tablahuellas/src/main/resources/es/gob/afirma/plugin/tablahuellas/propiedades.properties
@@ -9,6 +9,12 @@ attributeMimeType=MimeType
  
 rutaRecursos=es/gob/afirma/plugin/tablahuellas/
 ficheroAyuda=Plugin_TablaHuellas_v00r01Alpha.pdf
+ficheroDocumento1=Documento1_Firmado_AutoFirma_v00r00_signed.pdf
+ficheroDocumento2=Documento2_Firmado_Adobe_v00r00_signed.pdf
+ficheroDocumento3=Documento3_Firmado_Autofirma_Adobe_v00r00_signed.pdf
+ficheroIndice=Remisión_Documentos_v00r00_signed.pdf
+ficheroOficio=Oficio_Remisión_Documentos_v00r00_signed.pdf
+ficheroRelaciones=Relacion_Orden_Transitiva_v00r00.pdf
 
 separadorListaEtiquetas=@@@
 separadorEtiqueta=,
