--- a/afirma-simple-plugin-tablahuellas/src/main/resources/es/gob/afirma/plugin/tablahuellas/propiedades.properties
+++ b/afirma-simple-plugin-tablahuellas/src/main/resources/es/gob/afirma/plugin/tablahuellas/propiedades.properties
@@ -20,7 +20,7 @@ rtfHeader={\\rtf1\\ansi\\deff0{\\fonttbl{\\f60\\fnil\\fprq2\\fcharset0 @font@;}}
 rtfTablaTitulo=\\trowd\\clcbpat1\\cellx8500{\\pard\\intbl\\fi140\\brdrt\\brdrs\\brdrw1\\brdrl\\brdrs\\brdrw1\\brdrb\\brdrs\\brdrw1\\brdrr\\brdrs\\brdrw1{\\f60\\fs24\\b\\cf2 @titulo@}}\\cell\\row
 rtfTablaFichero=\\trowd\\clbrdrl\\brdrs\\brdrw1\\cellx1500\\clbrdrr\\brdrs\\brdrw1\\cellx7000{\\pard\\intbl\\fi140{\\f60\\fs20 @ficheroTit@}}\\cell{\\pard\\intbl{\\f60\\fs20 @fichero@}}\\cell\\row
 rtfTablaTamano=\\trowd\\clbrdrl\\brdrs\\brdrw1\\cellx1500\\clbrdrr\\brdrs\\brdrw1\\cellx7000{\\pard\\intbl\\fi140{\\f60\\fs20 @tamanoTit@}}\\cell{\\pard\\intbl{\\f60\\fs20 @tamano@}}\\cell\\row
-rtfTablaCsv=\\trowd\\clbrdrl\\brdrs\\brdrw1\\cellx1500\\clbrdrr\\brdrs\\brdrw1\\cellx7000{\\pard\\intbl\\fi140{\\f60\\fs20 @csvTit@}}\\cell{\\pard\\intbl{\\f60\\fs20 @csv@}}\\cell\\row
+rtfTablaCarpeta=\\trowd\\clbrdrl\\brdrs\\brdrw1\\cellx1500\\clbrdrr\\brdrs\\brdrw1\\cellx7000{\\pard\\intbl\\fi140{\\f60\\fs20 @carpetaTit@}}\\cell{\\pard\\intbl{\\f60\\fs20 @carpeta@}}\\cell\\row
 rtfTablaHuella=\\trowd\\clbrdrl\\brdrs\\brdrw1\\clbrdrb\\brdrs\\brdrw1\\cellx1500\\clbrdrr\\brdrs\\brdrw1\\clbrdrb\\brdrs\\brdrw1\\cellx7000{\\pard\\intbl\\fi140{\\f60\\fs20 @huellaTit@}}\\cell{\\pard\\intbl{\\f60\\fs20 @huella@}}\\cell\\row
 rtfTablaTituloHuellaFormato=\\trowd\\cellx7500{\\pard\\intbl\\qr\\ri140\\f60\\fs16 @tituloHuellaFormato@}\\intbl\\cell\\row 
 rtfFooter=}
@@ -31,9 +31,17 @@ rtfCampoTituloContenido=@titulo@
 rtfCampoTituloHuellaFormato=@tituloHuellaFormato@
 rtfCampoFicheroTitulo=@ficheroTit@
 rtfCampoFicheroContenido=@fichero@
-rtfCampoCsvTitulo=@csvTit@
-rtfCampoCsvContenido=@csv@
+rtfCampoCarpetaTitulo=@carpetaTit@
+rtfCampoCarpetaContenido=@carpeta@
 rtfCampoHuellaTitulo=@huellaTit@
 rtfCampoHuellaContenido=@huella@
 rtfCampoTamanoTitulo=@tamanoTit@
 rtfCampoTamanoContenido=@tamano@
+
+tablaTitulo=Huellas digitales
+tablaFichero=Fichero:
+tablaCarpeta=Carpeta
+tablaTamano=Tamaño:
+tablaHuella=Huella:
+
+formatoHuella=Formato huella:
